
syntax = "proto3";
import "google/protobuf/timestamp.proto";

package eqmonitor;

message NotificationPayload {
  string event_id = 1;
  Type type = 2;

  oneof information {
    EewInformation eew_information = 3;
    EarthquakeInformation earthquake_information = 4;
  }

  enum Type {
    TYPE_UNSPECIFIED = 0;
    TYPE_EARTHQUAKE = 1;
    TYPE_EEW = 2;
  }

  message EewInformation {
    HypoInformation hypo_information = 1;
    optional JmaIntensity max_intensity = 2;
    repeated EewRegionIntensity region_intensities = 3;
  }

  message EarthquakeInformation {
    HypoInformation hypo_information = 1;
    optional JmaIntensity max_intensity = 2;
    repeated RegionIntensity region_intensities = 3;
  }

  message RegionIntensity {
    string code = 1;
    JmaIntensity intensity = 2;
  }

  message EewRegionIntensity {
    string code = 1;
    JmaIntensity intensity = 2;
    optional google.protobuf.Timestamp arrival_time = 3;
  }

  message HypoInformation {
    int32 code = 1;
    string name = 2;
    float latitude = 3;
    float longitude = 4;
    int32 depth = 5;
    float magnitude = 6;
  }
}

enum JmaIntensity {
  JMA_INTENSITY_UNSPECIFIED = 0;
  JMA_INTENSITY_0 = 10;
  JMA_INTENSITY_1 = 20;
  JMA_INTENSITY_2 = 30;
  JMA_INTENSITY_3 = 40;
  JMA_INTENSITY_4 = 45;
  JMA_INTENSITY_5_MINUS = 50;
  JMA_INTENSITY_5_PLUS = 55;
  JMA_INTENSITY_6_MINUS = 60;
  JMA_INTENSITY_6_PLUS = 65;
  JMA_INTENSITY_7 = 70;
}